syntax = "proto3";

package example.v1;

import "google/protobuf/descriptor.proto";

extend google.protobuf.EnumValueOptions {
  optional string string_name = 123456789;
}

enum HogeEnum {
  HOGE_ENUM_UNSPECIFIED = 0;
  HOGE_ENUM_SEARCH = 1 [deprecated = true];
  HOGE_ENUM_DISPLAY = 2 [
    (string_name) = "display_value"
  ];
}

message HogeMessage {
  string hoge_field = 1;
}
